--- a/src/index.css
+++ b/src/index.css
@@ -73,20 +73,12 @@ aside {
   display: flex;
   flex-direction: column;
   gap: 24px;
-
-  /* height: 100%;
-  width: 360px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  overflow-x: hidden;
-  padding-top: 20px; */
 }
 
 main {
-  margin-left: 360px; /* Same as the width of the sidenav */
+  margin-left: 488px; /* Same as the width of the sidenav */
   padding: 0px 10px;
+  width: auto;
 }
 
 .container {
@@ -102,16 +94,22 @@ main {
 .location {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .location-input {
   border-radius: 10px;
-  padding: 18px 18px 18px 18px;
+  padding: 18px 18px 18px 36px;
   /* width: 100%; */
   height: 20px;
   background: var(--inputs);
 }
 
+.cont-input-location {
+  position: relative;
+  width: 370px;
+  margin: 0 auto;
+}
 .location-label {
   font-family: var(--font-family);
   font-weight: 500;
@@ -139,26 +137,185 @@ main {
 .filter-group {
   margin-top: 24px;
   display: flex;
+  flex-wrap: wrap;
   gap: 8px;
 }
 .filter-item {
   border: 1px solid rgba(16, 24, 40, 0.2);
   border-radius: 10px;
-  padding: 17px 27px;
+  /* padding: 17px 27px; */
   width: 113px;
   height: 95px;
+  display: flex;
+  flex-direction: column;
+}
+.filter-item-text {
+  text-align: center;
 }
 
-.filter-item :hover {
+.filter-item:hover {
   border: 1px solid var(--button);
 }
-.filter-button {
+.filter-button,
+.showmore-button {
   border-radius: 200px;
   /* padding: 16px; */
   width: 173px;
   height: 56px;
   background: var(--button);
+  display: flex;
   text-align: center;
-
   color: #fff;
+}
+.filter-button:hover {
+  background: #d84343;
+}
+
+.filter-button span {
+  margin: auto;
+}
+
+.icon {
+  stroke: #101828;
+  fill: none;
+  margin: auto;
+}
+
+.icon-input {
+  stroke: #101828;
+  fill: none;
+  margin: auto;
+  position: absolute;
+  right: 100%+20px;
+  top: 45%;
+  /* display: none; */
+}
+
+.filter-item-text {
+  margin: auto;
+}
+
+/* -------------------------------------MAIN CONTENT */
+.main-container {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.product-item {
+  height: 358px;
+  width: 100%;
+  border: 1px solid rgba(16, 24, 40, 0.2);
+  border-radius: 20px;
+  padding: 24px;
+  background: #fff;
+}
+
+/* ----------------------------------PRODUCT SECTION */
+.product-item {
+  display: flex;
+}
+
+.product-info {
+  width: 100%;
+  padding-left: 24px;
+  display: flex;
+  flex-direction: column;
+}
+
+.product-title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.product-price,
+.product-name {
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 125%;
+  color: var(--main);
+}
+
+.product-price-cont {
+  display: flex;
+}
+.product-title-info {
+  display: flex;
+  gap: 8px;
+  padding-bottom: 24px;
+}
+
+.product-btn-option {
+  border-radius: 100px;
+  padding: 12px 18px;
+  background: var(--block-features);
+  display: flex;
+}
+
+.showmore-button span {
+  margin: auto;
+}
+
+.showmore-button:hover {
+  background: #d84343;
+}
+
+/* -------------------------------Modal */
+.modal-container {
+  border-radius: 20px;
+  padding: 40px;
+  width: 982px;
+  height: 720px;
+  background: #fff;
+
+  border: 1px solid rgba(16, 24, 40, 0.2);
+}
+
+.modal-overlay {
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-title-cont {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 24px;
+}
+
+.modal-title {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.modal-img-container {
+  display: flex;
+  gap: 16px;
+  padding-bottom: 24px;
+}
+.modal-product-text {
+  padding-bottom: 24px;
+}
+
+.navi-info {
+  display: flex;
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 120%;
+  color: var(--main);
+  gap: 16px;
+}
+
+.navi-reviews:hover,
+.navi-features:hover {
+  cursor: pointer;
 }
