--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ button {
 img {
   display: block;
   max-width: 100%;
-  height: auto;
+  /* height: auto; */
 }
 
 aside {
@@ -180,6 +180,17 @@ main {
   fill: none;
   margin: auto;
 }
+.icon-heart {
+  stroke: var(--main);
+  fill: none;
+  margin: auto;
+}
+
+.icon-heart:hover {
+  stroke: var(--button);
+  fill: var(--button);
+  margin: auto;
+}
 
 .icon-input {
   stroke: #101828;
@@ -202,7 +213,7 @@ main {
   gap: 32px;
 }
 .product-item {
-  height: 358px;
+  /* height: 358px; */
   width: 100%;
   border: 1px solid rgba(16, 24, 40, 0.2);
   border-radius: 20px;
@@ -271,7 +282,7 @@ main {
   border-radius: 20px;
   padding: 40px;
   width: 982px;
-  height: 720px;
+  /* height: 720px; */
   background: #fff;
 
   border: 1px solid rgba(16, 24, 40, 0.2);
@@ -288,6 +299,7 @@ main {
   height: 100vh;
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.4);
+  overflow: scroll;
 }
 
 .modal-title-cont {
